[project]
name = "twinllm-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Giulio Federico"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "zenml[server] (==0.95.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
